<resources>
    <string name="app_name">بازارشهر</string>
    <string name="gallery">گالری</string>
    <string name="camera">دوربین</string>
    <string name="home">خانه</string>
    <string name="category">دسته‌بندی‌ها</string>
    <string name="category_title">دسته‌بندی‌ فروشگاه‌ها</string>
    <string name="search">جستجو</string>
    <string name="my_store">فروشگاه من</string>
    <string name="my_chat">پیام‌ها</string>
    <string name="title">title</string>

    <string name="home_page_title">خانه</string>
    <string name="category_page_title">دسته‌بندی</string>
    <string name="my_store_page_title">فروشگاه من</string>
    <string name="jobs_page_title">فروشگاه‌ها</string>

    <string name="search_title">جستجو کنید</string>
    <string name="search_hint">فروشگاه ستاره</string>
    <string name="submit_store">ثبت فروشگاه</string>
    <string name="submit_product">ثبت محصول</string>

    <string name="add_product_title">ثبت محصول</string>
    <string name="add_store_title">ثبت فروشگاه</string>
    <string name="categories">دسته‌بندی‌ها</string>
    <string name="jobs">فروشگاه‌ها</string>
    <string name="information">اطلاعات</string>
    <string name="products">محصولات</string>
    <string name="nothing_to_see">nothing_to_see</string>
    <string name="phone_number">شماره تلفن:  </string>
    <string name="user_phone_number">شماره تلفن</string>
    <string name="more_details">توضیحات:</string>
    <string name="address">آدرس: </string>
    <string name="show_products">نمایش محصولات</string>
    <string name="show_jobs">نمایش فروشگاه‌ها</string>
    <string name="malls">پاساژها</string>

    <string name="please_select_category">دسته بندی مورد نظر را انتخاب کنید</string>
    <string name="no_product_to_show">محصولی برای نمایش وجود ندارد</string>
    <string name="please_fill_this_field">لطفا این قسمت را پر کنید.</string>
    <string name="please_select_city">شهر را انتخاب کنید</string>
    <string name="no_search_result">آیتمی پبدا نشد، کلمه دیگری را جستجو کنید</string>


    <string name="incorrect_phone_number">شماره تلفن اشتباه است</string>
    <string name="confirm_password_match">پسورد با تکرار آن برابر نیست</string>

    <string name="product_name">نام محصول</string>
    <string name="choice_image">انتخاب عکس</string>
    <string name="details">توضیحات</string>
    <string name="enter_details">توضیحات خود را وارد کنید</string>
    <string name="job_name">نام فروشگاه</string>
    <string name="enter_phone_number">شماره تلفن را وارد کنید</string>
    <string name="enter_address_details">جزئیات آدرس را وارد کنید</string>
    <string name="submit">ثبت</string>

    <string name="job_id">فروشگاه شما</string>

    <string name="select_image">لطفا تصویر را وارد کنید.</string>

    <string name="product_added">محصول با موفقیت اضافه شد.</string>
    <string name="try_again">لطفا دوباره امتحان کنید.</string>

    <string name="check_username">نام کاربری و یا شماره تلفن شما تکراری می‌باشد.</string>
    <string name="message_send">پیام ارسال شد.</string>
    <string name="message_unsend">ارسال پیام با مشکل رو به رو شد.</string>
    <string name="job_added">فروشگاه با موفقیت ثبت شد.</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="register">ثبت نام</string>
    <string name="login">ورود</string>
    <string name="email">ایمیل</string>
    <string name="password">رمز عبور</string>
    <string name="login_user">ورود کاربر</string>
    <string name="confirm_password">تکرار پسورد</string>
    <string name="user_name">نام کاربری</string>

    <string name="no_job_to_show">فروشگاهی برای نمایش وجود ندارد.</string>

    <string name="product_details">مشخصات محصول</string>
    <string name="job_details">مشخصات فروشگاه</string>
    <string name="mall_details">مشخصات پاساژ</string>
    <string name="error_sign_in">شماره تلفن و یا پسورد اشتباه است.</string>
    <string name="select_category_of_job">دسته بندی فروشگاه خود را انتخاب کنید</string>
    <string name="select_mall_of_job">پاساژ را انتخاب کنید</string>
    <string name="insert_job_id">فروشگاه خود را انتخاب کنید</string>
    <string name="your_message">پیام شما...</string>

    <string name="select_city">شهر خود را انتخاب کنید</string>

    <string name="my_chats">پیام‌های دریافتی</string>
    <string name="send_message">ارسال پیام</string>

    <string name="bane">بانه</string>
    <string name="saghz">سقز</string>
    <string name="marivan">مریوان</string>
    <string name="edit_profile">ویرایش پروفایل</string>
    <string name="city">شهر:</string>
    <string name="choice_city">انتخاب شهر</string>
    <string name="cities">شهر‌ها</string>
    <string name="user_profile">عکس کاربر</string>
    <string name="edit_profile_success">ویرایش با موفقیت انجام شد.</string>
    <string name="your_jobs">فروشگاه‌های شما</string>
    <string name="no_user_jobs">شما فروشگاهی ثبت نکرده‌اید.</string>
    <string name="send_message_to_supplier">ارسال پیام به فروشنده</string>
    <string name="user_submitted_job">هر کاربر تنها می‌تواند یک فروشگاه ثبت کند</string>
    <string name="critics_and_suggestions">انتقادات و پیشنهادات</string>
    <string name="enter_your_critics_and_suggestions">اتقادات و پیشنهادات خود را بنویسید.</string>
    <string name="enter_for_reserve">برای رزرو تبلیغات کلیک کنید.</string>
    <string name="show_your_jobs">کسب و کار خود را به بهترین شکل به دیگران معرفی کنید.</string>
    <string name="reserve_add">رزرو تبلیغات</string>

</resources>