<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <import type="android.view.View" />

        <variable
            name="addViewModel"
            type="com.bazar.bane.bazarshahr.viewModel.AddViewModel" />
    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorBackground"
        android:orientation="vertical">

        <include
            android:id="@+id/toolbar"
            layout="@layout/toolbar_with_back" />

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingTop="@dimen/_10sdp">

                <androidx.cardview.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/_10sdp"
                    android:layout_marginRight="@dimen/_10sdp"
                    android:layout_marginBottom="@dimen/_5sdp"
                    app:cardCornerRadius="@dimen/_10sdp">
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="horizontal"
                        android:layout_margin="@dimen/_5sdp">
                        <TextView
                            android:layout_gravity="center"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:layout_marginEnd="@dimen/_5sdp"
                            android:text="@string/user_submitted_job"
                            android:textColor="@color/colorPrimaryDark"
                            android:textSize="@dimen/_10sdp" />

                        <androidx.appcompat.widget.AppCompatImageView
                            android:layout_width="@dimen/_25sdp"
                            android:layout_height="@dimen/_25sdp"
                            android:layout_gravity="center_horizontal|center_vertical"
                            app:srcCompat="@drawable/ic_info"
                            app:tint="@color/colorPrimaryDark" />

                    </LinearLayout>
                </androidx.cardview.widget.CardView>


                <androidx.cardview.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/_10sdp"
                    android:layout_marginRight="@dimen/_10sdp"
                    android:layout_marginBottom="@dimen/_5sdp"
                    app:cardCornerRadius="@dimen/_10sdp">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="horizontal"
                        android:padding="@dimen/_5sdp"
                        android:paddingEnd="@dimen/_5sdp">


                        <EditText
                            android:id="@+id/title"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:ems="10"
                            android:hint="@string/job_name"
                            android:inputType="textPersonName"
                            android:textColorHint="@color/colorGray"
                            android:textSize="@dimen/_10sdp" />

                        <androidx.appcompat.widget.AppCompatImageView
                            android:layout_width="@dimen/_25sdp"
                            android:layout_height="@dimen/_25sdp"
                            android:layout_gravity="center_horizontal|center_vertical"
                            app:srcCompat="@drawable/ic_store"
                            app:tint="@color/colorPrimaryDark" />

                    </LinearLayout>

                </androidx.cardview.widget.CardView>

                <androidx.cardview.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/_10sdp"
                    android:layout_marginRight="@dimen/_10sdp"
                    app:cardCornerRadius="@dimen/_10sdp">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:paddingLeft="@dimen/_10sdp"
                        android:paddingRight="@dimen/_10sdp">

                        <RelativeLayout
                            android:id="@+id/add_image"
                            android:layout_width="@dimen/_146sdp"
                            android:layout_height="@dimen/_110sdp"
                            android:layout_gravity="center"
                            android:layout_marginTop="@dimen/_10sdp"
                            android:layout_marginBottom="@dimen/_10sdp"
                            android:background="@drawable/bg_round_stroke_primary_dark"
                            app:cardCornerRadius="@dimen/_12sdp"
                            app:cardElevation="0dp">

                            <LinearLayout
                                android:id="@+id/select_layer"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_centerInParent="true"
                                android:orientation="vertical">

                                <androidx.appcompat.widget.AppCompatImageView
                                    android:id="@+id/icon_take_photo"
                                    android:layout_width="@dimen/_30sdp"
                                    android:layout_height="@dimen/_30sdp"
                                    android:layout_gravity="center"
                                    android:padding="@dimen/_5sdp"
                                    android:scaleType="centerCrop"
                                    android:tint="@color/colorPrimary"
                                    app:srcCompat="@drawable/ic_add_static" />

                                <TextView
                                    android:id="@+id/text_take_photo"
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:text="@string/choice_image"
                                    android:textColor="@color/colorPrimary" />

                            </LinearLayout>
                        </RelativeLayout>

                        <androidx.recyclerview.widget.RecyclerView
                            android:id="@+id/gallery_recycler"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="@dimen/_10sdp"
                            android:visibility="gone" />

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="@dimen/_10sdp"
                            android:text="@string/details"
                            android:textColor="@color/colorPrimaryDark" />

                        <EditText
                            android:id="@+id/details"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginBottom="@dimen/_5sdp"
                            android:ems="10"
                            android:hint="@string/enter_details"
                            android:inputType="textPersonName"
                            android:textColor="@color/colorBlack"
                            android:textSize="@dimen/_12sdp" />

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="@dimen/_10sdp"
                            android:text="@string/phone_number"
                            android:textColor="@color/colorPrimaryDark" />

                        <EditText
                            android:id="@+id/phone_number"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginBottom="@dimen/_5sdp"
                            android:ems="11"
                            android:hint="@string/enter_phone_number"
                            android:inputType="phone"
                            android:textColor="@color/colorBlack"
                            android:textSize="@dimen/_12sdp" />

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="@dimen/_10sdp"
                            android:text="@string/address"
                            android:textColor="@color/colorPrimaryDark" />
                        <TextView
                            android:layout_gravity="end"
                            android:id="@+id/city"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="@dimen/_5sdp"
                            android:layout_marginEnd="@dimen/_5sdp"
                            android:layout_marginBottom="@dimen/_5sdp"
                            android:hint="@string/select_city"
                            android:textColor="@color/colorBlack"
                            android:textSize="@dimen/_12sdp" />

                        <EditText
                            android:id="@+id/address"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginBottom="@dimen/_5sdp"
                            android:ems="10"
                            android:hint="@string/enter_address_details"
                            android:inputType="textPersonName"
                            android:textColor="@color/colorBlack"
                            android:textSize="@dimen/_12sdp" />

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="@dimen/_10sdp"
                            android:text="دسته بندی فروشگاه:"
                            android:textColor="@color/colorPrimaryDark" />

                        <TextView
                            android:id="@+id/category_title"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="@dimen/_5sdp"
                            android:layout_marginBottom="@dimen/_5sdp"
                            android:hint="@string/select_category_of_job"
                            android:textColor="@color/colorBlack"
                            android:textSize="@dimen/_12sdp" />

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="@dimen/_10sdp"
                            android:text="پاساژ فروشگاه:"
                            android:textColor="@color/colorPrimaryDark" />

                        <TextView
                            android:id="@+id/mall_title"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="@dimen/_5sdp"
                            android:layout_marginBottom="@dimen/_5sdp"
                            android:hint="@string/select_mall_of_job"
                            android:textColor="@color/colorBlack"
                            android:textSize="@dimen/_12sdp" />

                    </LinearLayout>
                </androidx.cardview.widget.CardView>

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/_10sdp"
                    android:layout_marginTop="@dimen/_10sdp"
                    android:layout_marginRight="@dimen/_10sdp"
                    android:layout_marginBottom="@dimen/_15sdp">

                    <ProgressBar
                        android:id="@+id/progressBar"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:visibility="@{addViewModel.mainLoadingState?View.VISIBLE:View.GONE}" />

                    <androidx.appcompat.widget.AppCompatButton
                        android:id="@+id/submit"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@drawable/bg_round_primary"
                        android:gravity="center"
                        android:text="@string/submit"
                        android:textAllCaps="false"
                        android:textColor="@color/colorWhite"
                        android:visibility="@{addViewModel.mainLoadingState?View.GONE:View.VISIBLE}" />


                </RelativeLayout>
            </LinearLayout>
        </ScrollView>


    </LinearLayout>
</layout>
