<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/item_select"
    android:layout_width="@dimen/_150sdp"
    android:layout_height="wrap_content"
    android:layout_margin="@dimen/_5sdp"
    app:cardCornerRadius="@dimen/_10sdp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">


            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/image"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_100sdp"
                android:scaleType="fitXY"
                app:srcCompat="@drawable/image_default" />


        </RelativeLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="@dimen/_5sdp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:maxLines="1"
                android:layout_marginBottom="@dimen/_5sdp"
                android:text="@string/title"
                android:textColor="@color/colorBlack"
                android:textSize="@dimen/_14sdp" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/products_btn"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_25sdp"
                android:layout_weight="1"
                android:background="@drawable/bg_round_primary"
                android:text="@string/products"
                android:textAllCaps="false"
                android:textColor="@color/white" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/information_btn"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_25sdp"
                android:layout_marginTop="@dimen/_10sdp"
                android:layout_weight="1"
                android:background="@drawable/bg_round_stroke_primary_dark"
                android:text="@string/information"
                android:textAllCaps="false"
                android:textColor="@color/colorPrimaryDark" />

        </LinearLayout>
    </LinearLayout>
</androidx.cardview.widget.CardView>