<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <import type="android.view.View" />

        <variable
            name="loginViewModel"
            type="com.bazar.bane.bazarshahr.viewModel.LoginViewModel" />
    </data>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/bac_gard_primary"
        android:fitsSystemWindows="true">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/splash_screen_background"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_margin="5dp"
            android:orientation="vertical"
            tools:ignore="UselessParent">
            
            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="@dimen/_60sdp"
                app:cardCornerRadius="@dimen/_15sdp"
                android:layout_marginStart="@dimen/_40sdp"
                android:layout_marginEnd="@dimen/_40sdp">
                <androidx.appcompat.widget.AppCompatImageView
                    android:layout_width="match_parent"
                    android:layout_height="120dp"
                    android:layout_gravity="center"
                    android:layout_marginStart="@dimen/_5sdp"
                    android:layout_marginEnd="@dimen/_5sdp"
                    app:srcCompat="@drawable/logo"/>
            </androidx.cardview.widget.CardView>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:orientation="vertical"
                android:padding="10dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="@dimen/_12sdp"
                    android:background="@drawable/bg_round_stroke_white"
                    android:gravity="center_vertical"
                    android:paddingStart="@dimen/_20sdp"
                    android:paddingTop="@dimen/_6sdp"
                    android:paddingEnd="@dimen/_10sdp"
                    android:paddingBottom="@dimen/_6sdp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="IR 09"
                        android:layout_marginEnd="@dimen/_5sdp"
                        android:textColor="@color/colorWhite"
                        android:textSize="@dimen/_18sdp"/>

                    <EditText
                        android:id="@+id/edt_mobile"
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/_30sdp"
                        android:background="@android:color/transparent"
                        android:hint="@string/user_phone_number"
                        android:inputType="phone"
                        android:gravity="center"
                        android:maxLength="9"
                        android:textSize="@dimen/_12sdp"
                        android:singleLine="true"
                        android:textColor="@color/colorWhite"
                        android:textColorHint="@color/colorWhite" />
                </LinearLayout>

                <EditText
                    android:id="@+id/user_name"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_42sdp"
                    android:layout_marginTop="@dimen/_15sdp"
                    android:background="@drawable/bg_round_stroke_white"
                    android:gravity="center"
                    android:hint="@string/user_name"
                    android:inputType="text"
                    android:textColor="@color/colorWhite"
                    android:textColorHint="@color/colorWhite"
                    android:textSize="@dimen/_12sdp"
                    android:maxLines="1"
                    android:lines="1"
                    android:singleLine="true" />

                <EditText
                    android:id="@+id/password"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_42sdp"
                    android:layout_marginTop="@dimen/_15sdp"
                    android:background="@drawable/bg_round_stroke_white"
                    android:gravity="center"
                    android:hint="@string/password"
                    android:inputType="textPassword"
                    android:textColor="@color/colorWhite"
                    android:textColorHint="@color/colorWhite"
                    android:textSize="@dimen/_12sdp" />

                <EditText
                    android:id="@+id/user_confirm_password"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_42sdp"
                    android:layout_marginTop="@dimen/_15sdp"
                    android:background="@drawable/bg_round_stroke_white"
                    android:gravity="center"
                    android:hint="@string/confirm_password"
                    android:inputType="textPassword"
                    android:textColor="@color/colorWhite"
                    android:textColorHint="@color/colorWhite"
                    android:textSize="@dimen/_12sdp" />

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="end"
                    android:layout_marginTop="@dimen/_15sdp">
                    <ProgressBar
                        android:id="@+id/login_progress"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerInParent="true"
                        android:visibility="@{loginViewModel.mainLoadingState?View.VISIBLE:View.GONE}"/>
                    <androidx.appcompat.widget.AppCompatButton
                        android:id="@+id/register"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@drawable/bg_round_white"
                        android:gravity="center"
                        android:text="@string/register"
                        android:textColor="@color/colorPrimaryDark"
                        android:textSize="@dimen/_16sdp"
                        android:visibility="@{loginViewModel.mainLoadingState?View.GONE:View.VISIBLE}"/>
                </RelativeLayout>

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/login"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_15sdp"
                    android:background="@drawable/bg_round_white"
                    android:gravity="center"
                    android:text="@string/login"
                    android:textColor="@color/colorPrimaryDark"
                    android:textSize="@dimen/_16sdp" />

            </LinearLayout>


        </LinearLayout>
    </RelativeLayout>
</layout>
